--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "simpleheat",
+  "name": "@vgrid/simpleheat",
   "version": "0.4.0",
   "description": "A tiny JavaScript library for drawing heatmaps with Canvas",
-  "homepage": "https://github.com/mourner/simpleheat",
   "keywords": [
     "heatmap",
     "canvas",
     "visualization"
   ],
+    "files": [
+    "simpleheat.js"
+  ],
   "author": "Vladimir Agafonkin",
+  "contributors": [
+    "Andres Cruz <39206515+acruzg@users.noreply.github.com>"
+  ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/mourner/simpleheat.git"
+    "url": "git://github.com/vgrid/simpleheat.git"
   },
   "main": "simpleheat.js",
   "scripts": {
